Export All segments features added and export segment api modified

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segments-list/segments-list.component.html
@@ -24,7 +24,7 @@
         mat-flat-button
         color="primary"
         class="ft-14-700 export-segments"
-        (click)="openExportAllSegmentDialog()"
+        (click)="openExportAllSegment()"
         *ngIf="(permissions$ | async)?.segments.create"
       >
         <mat-icon>download</mat-icon>
