--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.html
@@ -5,7 +5,7 @@
     <p class="ft-16-400">
       {{ 'segments.import-segmemt.message.text' | translate }}
     </p>
-    <input accept=".json" type="file" class="ft-14-400 file-input" (change)="uploadFile($event)" />
+    <input accept=".json" type="file" multiple class="ft-14-400 file-input" (change)="uploadFile($event)" />
     <span class="error-msg" *ngIf="!isSegmentJSONValid">
       {{ 'segments.import-segment.error.message.text' | translate }}
     </span>
