replace segment in importSegment  with segments as plural

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.html
@@ -48,7 +48,7 @@
         (uploadedFileCount === 1 && (!segmentInfo || !isSegmentJSONValid)) ||
           (uploadedFileCount > 1 && importFileErrors.length !== 0)
       "
-      (click)="importSegment()"
+      (click)="importSegments()"
     >
       {{ 'global.import.text' | translate }}
     </button>
