add few more missing readonly properties for archive state

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -239,7 +239,7 @@
                     <span class="ft-18-700 end-criteria end-criteria--text"> ( </span>
                     <span
                       *ngIf="
-                        permissions?.experiments.update && !isExperimentStateCancelled;
+                        permissions?.experiments.update && !isExperimentStateCancelled && experiment.state !== ExperimentState.ARCHIVED;
                         else endingCriteriaCommonTempReadOnly
                       "
                       (click)="updateEndingCriteria()"
@@ -289,7 +289,7 @@
                     </ng-template>
 
                     <span class="ft-18-700 end-criteria end-criteria--text"> ) </span>
-                    <mat-icon class="edit-icon" *ngIf="permissions?.experiments.update && !isExperimentStateCancelled">
+                    <mat-icon class="edit-icon" *ngIf="permissions?.experiments.update && !isExperimentStateCancelled && experiment.state !== ExperimentState.ARCHIVED">
                       create
                     </mat-icon>
                   </ng-container>
@@ -297,7 +297,7 @@
                   <!-- if we have end date -->
                   <span class="ft-18-700 end-criteria" *ngIf="experiment.endOn">
                     <ng-container
-                      *ngIf="permissions?.experiments.update && !isExperimentStateCancelled; else endOnReadOnly"
+                      *ngIf="permissions?.experiments.update && !isExperimentStateCancelled && experiment.state !== ExperimentState.ARCHIVED; else endOnReadOnly"
                     >
                       <span class="end-criteria-underline--grey" (click)="updateEndingCriteria()">
                         {{ experiment.endOn | formatDate: 'medium date' }}
@@ -394,6 +394,7 @@
               class="ft-16-600"
               color="primary"
               (change)="toggleVerboseLogging($event)"
+              [disabled]="experiment.state === ExperimentState.CANCELLED || experiment.state === ExperimentState.ARCHIVED"
             >
               {{ 'home.view-experiment.logging.text' | translate | uppercase }}
             </mat-checkbox>
