stratification tab, table and import csv button and dialog box with cancel fuctionality done

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/experiment-users-root/experiment-users-root.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/experiment-users-root/experiment-users-root.component.html
@@ -10,6 +10,9 @@
       <mat-tab [label]="'users.preview-users-title.text' | translate">
         <users-preview-user></users-preview-user>
       </mat-tab>
+      <mat-tab [label]="'users.stratification.text' | translate">
+        <users-stratification-factor-list></users-stratification-factor-list>
+      </mat-tab>
     </mat-tab-group>
   </mat-card>
 </mat-card>
