--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/stratification-factor-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/stratification-factor-list.component.html
@@ -56,7 +56,7 @@
           <button
             type="button"
             class="row-action-btn"
-            (click)="handleDelete(rowIndex)"
+            (click)="handleDelete(rowData, rowIndex)"
           >
             <ng-container>
               <mat-icon class="icon">delete</mat-icon>
