--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.scss
@@ -24,6 +24,17 @@
     }
   }
 
+  .stratification-container {
+    .assignment-algorithm {
+      width: 230px;
+    }
+
+    .stratification-factor {
+      margin-left: 50px;
+      width: 230px;
+    }
+  }
+
   .condition-order,
   .consistency-rule,
   .chips {
