fetch, delete and download stratification factors functionality

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/stratification-factor-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/stratification-factor-list.component.html
@@ -46,7 +46,7 @@
           <button
             type="button"
             class="row-action-btn"
-            (click)="handleDownload(rowData, rowIndex)"
+            (click)="handleDownload(rowData)"
           >
             <ng-container>
               <mat-icon class="icon">download</mat-icon>
@@ -56,7 +56,7 @@
           <button
             type="button"
             class="row-action-btn"
-            (click)="handleDelete(rowData, rowIndex)"
+            (click)="handleDelete(rowData)"
           >
             <ng-container>
               <mat-icon class="icon">delete</mat-icon>
