adding stratification details and experiment design type on details page

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -139,7 +139,7 @@
                       <span
                         class="ft-18-700 section-data-value section-data-value--editable"
                         (click)="openDialog(DialogType.CHANGE_POST_EXPERIMENT_RULE)"
-                        >{{ experiment.postExperimentRule | titlecase }}</span
+                        >{{ experiment.postExperimentRule | uppercase }}</span
                       >
                       <mat-icon class="edit-icon" *ngIf="permissions?.experiments.update">create</mat-icon>
                     </div>
@@ -173,6 +173,16 @@
                     </span>
                   </ng-template>
                 </div>
+              </div>
+              
+              <!-- Experiment Type-->
+              <div class="section-data">
+                <span 
+                  class="ft-16-600 section-data-title"
+                >
+                  {{ 'home-global.design-type.text' | translate | uppercase }}
+                </span>
+                <span class="ft-18-700 section-data-value">{{ experiment.type | titlecase }} Experiment </span>
               </div>
             </div>
 
@@ -216,6 +226,16 @@
                   </span>
                 </ng-template>
                 <span class="ft-18-700 section-data-value">{{ experiment.consistencyRule || experiment.conditionOrder | titlecase }}</span>
+              </div>
+
+              <!-- Stratification Factor Assinment Algorithm -->
+              <div class="section-data">
+                <span 
+                  class="ft-16-600 section-data-title"
+                >
+                  {{ 'home-global.assignment-algorithm.text' | translate | uppercase }}
+                </span>
+                <span class="ft-18-700 section-data-value">{{ experiment.assignmentAlgorithm | titlecase }} </span>
               </div>
             </div>
 
@@ -348,6 +368,17 @@
                 >
                   {{ 'home.view-experiment.enrollment-time-logs.text' | translate }}
                 </span>
+              </div>
+              
+              <!-- Stratification Factor-->
+              <div class="section-data"
+              *ngIf="(experiment.assignmentAlgorithm === 'stratified random sampling')">
+                <span 
+                  class="ft-16-600 section-data-title"
+                >
+                  {{ 'home-global.stratification-factor.text' | translate | uppercase }}
+                </span>
+                <span class="ft-18-700 section-data-value">{{ experiment.stratificationFactor.stratificationFactorName }} </span>
               </div>
             </div>
           </div>
